<resources>    <string name="app_name">Currency</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="from">From</string>    <string name="to">To</string>    <string name="amount">Amount</string>    <string name="convert">Convert</string>    <string name="lastDays">Last 7 days</string></resources>