<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:padding="20dp"    tools:context=".MainActivity"><TextView    android:layout_width="wrap_content"    android:layout_height="wrap_content"    app:layout_constraintTop_toTopOf="parent"    app:layout_constraintStart_toStartOf="parent"    android:textColor="@color/black"    android:text="@string/from"    android:id="@+id/fromTxt"/>    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintEnd_toEndOf="parent"        android:textColor="@color/black"        android:text="@string/to"        android:id="@+id/toTxt"/>    <EditText        android:layout_width="100dp"        android:layout_height="wrap_content"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        android:hint="@string/amount"        app:layout_constraintTop_toBottomOf="@id/fromTxt"        android:textColorHint="@color/gray"        android:text="1"        android:gravity="center"        android:textColor="@color/black"        android:id="@+id/amountTxt"        android:inputType="number"/>    <Button        android:layout_width="0dp"        android:layout_height="wrap_content"        app:layout_constraintTop_toTopOf="@id/amountTxt"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toStartOf="@id/amountTxt"        android:layout_marginHorizontal="10dp"        android:text="@string/from"        android:textAllCaps="false"        android:id="@+id/fromBtn"/>    <Button        android:layout_width="0dp"        android:layout_height="wrap_content"        app:layout_constraintTop_toTopOf="@id/amountTxt"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toEndOf="@id/amountTxt"        android:layout_marginHorizontal="10dp"        android:text="@string/to"        android:textAllCaps="false"        android:id="@+id/toBtn"/>    <Button        android:layout_width="0dp"        android:layout_height="wrap_content"        app:layout_constraintTop_toBottomOf="@id/amountTxt"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        android:layout_margin="10dp"        android:text="@string/convert"        android:textAllCaps="false"        android:id="@+id/convertBtn"/>    <Button        android:layout_width="0dp"        android:layout_height="wrap_content"        app:layout_constraintTop_toBottomOf="@id/convertBtn"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        android:layout_margin="10dp"        android:text="@string/lastDays"        android:textAllCaps="false"        android:id="@+id/historicalBtn"/>    <androidx.recyclerview.widget.RecyclerView        android:layout_width="0dp"        android:layout_height="0dp"        app:layout_constraintTop_toBottomOf="@id/historicalBtn"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        android:layout_marginTop="15dp"        android:id="@+id/list"/></androidx.constraintlayout.widget.ConstraintLayout>